fixed the layout of an individual location on the account page. Matched the width to the past orders to create uniform look. Also added a blurry glass effect to the delete icon on a location.

--- a/src/styles/components/Locations/Location.css
+++ b/src/styles/components/Locations/Location.css
@@ -1,20 +1,23 @@
 
 .location-action-row {
-    width: 90%;
+    width: 25%;
     display: flex;
     align-items: center;
-    justify-content: flex-end;
-    margin-bottom: 1vw;
+    justify-content: center;
 }
 
 .location-container {
-    width: 100%;
+    width: 95%;
     border-radius: 5px;
     background-color: #a0262e;
     box-shadow: 0 0 5px -1px black;
     margin: 2vh auto;
-    padding: 5px;
+    display: flex;
+    flex-direction: row;
+    padding: 2vh 1vw;
 }
+
+/* sdf */
 
 .location-info-label, .location-info-value {
     color: #fff;
@@ -26,25 +29,27 @@
 }
 
 .location-info-row {
-    width: 100%;
+    width: 75%;
     display: flex;
     flex-direction: row;
+    align-items: center;
+    justify-content: center;
 }
 
 .remove-location-button {
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    background-color: #a0262e;
-    box-shadow: 0 0 3px 1px black;
+    background-color: rgba(255, 255, 255, 0.4);
+    box-shadow: 0 0 3px 1px white inset;
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: all 500ms;
+    transition: all 400ms ease-out;
 }
 
 .remove-location-button:hover {
     cursor: pointer;
     transform: scale(1.1);
-    box-shadow: 0 0 5px -1px black;
+    box-shadow: 0 0 5px 2px white inset ;
 }
