--- a/src/styles/components/PastOrders/PastOrder/PastOrder.css
+++ b/src/styles/components/PastOrders/PastOrder/PastOrder.css
@@ -23,7 +23,7 @@
 
 .past-order-container {
     position: relative;
-    width: 97.5%;
+    width: 95%;
     margin: 3vh auto;
     display: flex;
     flex-direction: row;
